# 3d-game-shaders-for-beginners

./: .gitignore  README.md  main.cxx  run.bat  shaders.vcxproj  unistd.h
demonstration/: CMakeLists.txt  run.bat  shaders.sln  shaders.vcxproj
demonstration/src/: main.cxx
shaders/fragment/: ssao.frag
